# yutils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  temp_only.py
.github/workflows/: test.yml
src/yutils/: configdict.py  linq.py  pytorch_nn_summary.py
src/yutils/nn/: common_dataproviders.py  commonmodules.py  dataprovider.py  nnconfig.py
src/yutils/nn/models/: BaseDeep.py  alexnet.py  densenet.py  lenet5.py  resnet.py  vgg.py
tests/: test_linq.py  test_pytorch_nn_summary.py
