[metadata]
name = yutils
description = my internal utils
author = Yuri Chebotarev
license = MIT
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =  yutils  
install_requires =
    requests>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = pytest>=6.0

